--- a/Assignment3/src/application/AudioSelection.fxml
+++ b/Assignment3/src/application/AudioSelection.fxml
@@ -6,37 +6,42 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="application.AudioSelectionController">
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AudioSelectionController">
    <children>
       <ListView fx:id="listViewAudioFiles" layoutX="184.0" layoutY="224.0" prefHeight="300.0" prefWidth="300.0" />
       <ListView fx:id="listViewSelected" layoutX="721.0" layoutY="224.0" prefHeight="300.0" prefWidth="300.0" />
-      <Button fx:id="buttonAdd" layoutX="572.0" layoutY="280.0" mnemonicParsing="false" onAction="#handleButtonAdd" text="&gt;&gt;">
+      <Button layoutX="572.0" layoutY="280.0" mnemonicParsing="false" onAction="#handleButtonAdd" text="&gt;&gt;">
          <font>
             <Font name="Manjari Regular" size="24.0" />
          </font></Button>
-      <Button fx:id="buttonMoveBack" layoutX="572.0" layoutY="415.0" mnemonicParsing="false" onAction="#handleButtonMoveBack" text="&lt;&lt;">
+      <Button layoutX="572.0" layoutY="415.0" mnemonicParsing="false" onAction="#handleButtonMoveBack" text="&lt;&lt;">
          <font>
             <Font name="Manjari Regular" size="24.0" />
          </font></Button>
-      <Button fx:id="buttonNext" layoutX="605.0" layoutY="642.0" mnemonicParsing="false" onAction="#handleButtonNext" text="Next: Select number of images &amp; Create video">
+      <Button layoutX="605.0" layoutY="642.0" mnemonicParsing="false" onAction="#handleButtonNext" text="Next: Select number of images &amp; Create video">
          <font>
             <Font name="Manjari Regular" size="24.0" />
          </font></Button>
-      <Button fx:id="buttonPreview" layoutX="273.0" layoutY="642.0" mnemonicParsing="false" onAction="#handleButtonPreview" text="Preview ">
+      <Button layoutX="273.0" layoutY="642.0" mnemonicParsing="false" onAction="#handleButtonPlay" text="Play">
          <font>
             <Font name="Manjari Regular" size="24.0" />
          </font></Button>
-      <Button fx:id="buttonBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonBack" text="Back">
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonBack" text="Back">
          <font>
             <Font name="Manjari Regular" size="24.0" />
          </font></Button>
-      <Text fill="WHITE" layoutX="600.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Audio files to be included in video">
+      <Text fill="WHITE" layoutX="600.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Audio files to be included in video">
          <font>
             <Font name="DejaVu Sans ExtraLight" size="32.0" />
          </font></Text>
-      <Text fill="WHITE" layoutX="184.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Existing audio files">
+      <Text fill="WHITE" layoutX="184.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Existing audio files">
          <font>
             <Font name="DejaVu Sans ExtraLight" size="32.0" />
          </font></Text>
+      <Text fill="WHITE" layoutX="207.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Combine you audio files into creation">
+         <font>
+            <Font name="DejaVu Sans ExtraLight" size="42.0" />
+         </font>
+      </Text>
    </children>
 </Pane>
