--- a/Assignment3/src/application/Menu.fxml
+++ b/Assignment3/src/application/Menu.fxml
@@ -1,27 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="application.MenuController">
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MenuController">
    <children>
-      <Text fill="WHITE" layoutX="185.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="VARpedia" textAlignment="CENTER" wrappingWidth="830.94580078125">
-         <font>
-            <Font name="DejaVu Sans ExtraLight" size="96.0" />
-         </font></Text>
-      <Text fill="WHITE" layoutX="157.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please select one of the following options:">
-         <font>
-            <Font name="DejaVu Sans ExtraLight" size="42.0" />
-         </font></Text>
-      <Button fx:id="buttonList" layoutX="157.0" layoutY="528.0" mnemonicParsing="false" onAction="#handleButtonList" text="View existing creations">
-         <font>
-            <Font name="Manjari Regular" size="24.0" />
-         </font></Button>
-      <Button fx:id="buttonCreate" layoutX="756.0" layoutY="528.0" mnemonicParsing="false" onAction="#handleButtonCreate" prefHeight="46.0" prefWidth="328.0" text="Create a new  creation">
-         <font>
-            <Font name="Manjari Regular" size="24.0" />
-         </font></Button>
+      <TabPane fx:id="tabPane" prefHeight="800.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Main Menu">
+               <content>
+                  <AnchorPane prefHeight="767.0" prefWidth="1200.0">
+                     <children>
+                        <Text fill="WHITE" layoutX="185.0" layoutY="267.0" strokeType="OUTSIDE" strokeWidth="0.0" text="VARpedia" textAlignment="CENTER" wrappingWidth="830.94580078125">
+                           <font>
+                              <Font name="DejaVu Sans ExtraLight" size="96.0" />
+                           </font>
+                        </Text>
+                        <Text fill="WHITE" layoutX="158.0" layoutY="390.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please select one of the following options:">
+                           <font>
+                              <Font name="DejaVu Sans ExtraLight" size="42.0" />
+                           </font>
+                        </Text>
+                        <Button fx:id="buttonList" layoutX="185.0" layoutY="486.0" mnemonicParsing="false" onAction="#handleButtonList" text="View existing creations">
+                           <font>
+                              <Font name="Manjari Regular" size="24.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="buttonCreate" layoutX="688.0" layoutY="486.0" mnemonicParsing="false" onAction="#handleButtonCreate" prefHeight="46.0" prefWidth="328.0" text="Create a new  creation">
+                           <font>
+                              <Font name="Manjari Regular" size="24.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+          <Tab fx:id="searchTab" text="Search">
+               <content>
+                  <AnchorPane prefHeight="767.0" prefWidth="1200.0">
+                     <children>
+                        <TextField fx:id="textFieldTerm" layoutX="300.0" layoutY="361.0" prefHeight="26.0" prefWidth="600.0" promptText="Term">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </TextField>
+                        <Button fx:id="buttonSearch" layoutX="545.0" layoutY="416.0" mnemonicParsing="false" onAction="#handleButtonSearch" text="Search">
+                           <font>
+                              <Font name="Manjari Regular" size="24.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="buttonBack" layoutX="35.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleButtonSearchBack" text="Back">
+                           <font>
+                              <Font name="Manjari Regular" size="24.0" />
+                           </font>
+                        </Button>
+                        <Text fill="WHITE" layoutX="185.0" layoutY="267.0" strokeType="OUTSIDE" strokeWidth="0.0" text="VARpedia" textAlignment="CENTER" wrappingWidth="830.94580078125">
+                           <font>
+                              <Font name="DejaVu Sans ExtraLight" size="96.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+        </tabs>
+      </TabPane>
    </children>
 </Pane>
