--- a/Assignment3/src/application/ImageSelector.fxml
+++ b/Assignment3/src/application/ImageSelector.fxml
@@ -1,28 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="application.ImageSelectorController">
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ImageSelectorController">
    <children>
       <Text fill="WHITE" layoutX="65.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="How many images would you like in your creation?">
          <font>
             <Font name="DejaVu Sans ExtraLight" size="42.0" />
          </font>
       </Text>
-      <TextField fx:id="textFieldNumber" layoutX="414.0" layoutY="248.0" promptText="Enter a number">
-         <font>
-            <Font size="24.0" />
-         </font></TextField>
-      <Text fill="WHITE" layoutX="363.0" layoutY="209.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(Between 1 and 10)">
-         <font>
-            <Font name="DejaVu Sans ExtraLight" size="42.0" />
-         </font>
-      </Text>
-      <Button fx:id="buttonEnter" layoutX="524.0" layoutY="313.0" mnemonicParsing="false" onAction="#handleButtonEnter" text="Enter">
+      <Button fx:id="buttonEnter" disable="true" layoutX="524.0" layoutY="313.0" mnemonicParsing="false" onAction="#handleButtonEnter" text="Enter">
          <font>
             <Font name="Manjari Regular" size="24.0" />
          </font></Button>
@@ -43,5 +36,22 @@
          <font>
             <Font name="Manjari Regular" size="24.0" />
          </font></Button>
+      <MenuButton fx:id="menuButtonNumber" layoutX="456.0" layoutY="204.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="232.0" text="MenuButton">
+        <items>
+            <MenuItem mnemonicParsing="false" onAction="#handleNumber1" text="1" />
+          <MenuItem mnemonicParsing="false" onAction="#handleNumber2" text="2" />
+          <MenuItem mnemonicParsing="false" onAction="#handleNumber3" text="3" />
+            <MenuItem mnemonicParsing="false" onAction="#handleNumber4" text="4" />
+            <MenuItem mnemonicParsing="false" onAction="#handleNumber5" text="5" />
+            <MenuItem mnemonicParsing="false" onAction="#handleNumber6" text="6" />
+            <MenuItem mnemonicParsing="false" onAction="#handleNumber7" text="7" />
+            <MenuItem mnemonicParsing="false" onAction="#handleNumber8" text="8" />
+            <MenuItem mnemonicParsing="false" onAction="#handleNumber9" text="9" />
+            <MenuItem mnemonicParsing="false" onAction="#handleNumber10" text="10" />
+        </items>
+         <font>
+            <Font size="24.0" />
+         </font>
+      </MenuButton>
    </children>
 </Pane>
